First commit to get HHH project on git repo

--- a/resources/css/aboutStyle.css
+++ b/resources/css/aboutStyle.css
@@ -103,8 +103,6 @@
 
     background-color: black;
     overflow: scroll;
-
-   
  }    
  
  .container2 {
@@ -131,9 +129,7 @@
 }
 
 
-
-
-
+THESE ARE JUST CHANGES TO CHECK IF MERGE WORKS
 
 
 
